--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
     margin: 0;
 }
 
+@font-face {
+    font-family: "Roboto-Light";
+    src: url(../assets/fonts/Roboto/Roboto-Light.ttf);
+}
+
 html{
     padding: 0;
     margin: 0;
@@ -10,7 +15,6 @@ html{
 }
 
 body{
-    background-color: rgba(12, 50, 85, 0.8);
     display: grid;
 }
 
@@ -19,8 +23,8 @@ header{
     background-color: rgba(12, 50, 85, 0.8);
 }
 
-footer{
-    color: seashell;
+.container-header{
+    display: grid;
 }
 
 .menu{
@@ -41,11 +45,52 @@ footer{
     color: rgb(47, 110, 192);
 }
 
-.container{
-    display: grid;
-    grid-template-rows: auto;
+/* Footer begin */
+
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20%;
+    padding: 55px 0px 0px 0px;
+    font-family: "Roboto-Light";
+    background-color: rgb(70, 65, 141);
+    color: seashell;
 }
 
-.about{
-    text-align: left;
+.container-footer{
+    display: grid;
+    grid-template-columns: auto auto;
+    text-align: center;
 }
+
+.social-icons i{
+    padding: 15px 5px 0px 5px;
+}
+
+.fa-github{
+    transition: ease-out;
+    transition-duration: 0.5s;
+    color: #FFFFFF;
+}
+
+.fa-github:hover{
+    transition: ease-out;
+    transition-duration: 0.5s;
+    color: #000000
+}
+
+.fa-linkedin{
+    transition: ease-out;
+    transition-duration: 0.5s;
+    color: #FFFFFF;
+}
+
+.fa-linkedin:hover{
+    transition: ease-out;
+    transition-duration: 0.5s;
+    color: #2867b2;
+}
+
+/* Footer end */
