--- a/css/style.css
+++ b/css/style.css
@@ -3,67 +3,161 @@
     margin: 0;
 }
 
+/* Fonts Google begin */
+
 @font-face {
     font-family: "Roboto-Light";
     src: url(../assets/fonts/Roboto/Roboto-Light.ttf);
 }
 
+@font-face {
+    font-family: "Roboto-Bold";
+    src: url(../assets/fonts/Roboto/Roboto-Bold.ttf);
+}
+
+/* Fonts Google end */
+
+/* RGB Effect */
+.rgb-effect{ 
+    height: 1%;
+    width: 100%;
+    position: absolute;
+    background: linear-gradient(124deg, #ff2400, #e81d1d, #00ff2a, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+    background-size: 1800% 1800%;
+  
+  -webkit-animation: rainbow 12s ease infinite;
+  -z-animation: rainbow 12s ease infinite;
+  -o-animation: rainbow 12s ease infinite;
+    animation: rainbow 12s ease infinite;}
+  
+  @-webkit-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+  @-moz-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+  @-o-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+  @keyframes rainbow { 
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+/* RGB Effect End */
+
 html{
     padding: 0;
     margin: 0;
-    color: white;
-}
-
-body{
-    display: grid;
+    background-color: #000000;
 }
 
 header{
-    text-align: center;
-    background-color: rgba(12, 50, 85, 0.8);
+    background: rgb(0, 0, 17);
+    padding-bottom: 15px;
+    font-family: "Roboto-Bold";
+    
 }
 
-.container-header{
-    display: grid;
+header ul{
+   padding-top: 10px;   
 }
 
-.menu{
-    font-family: Righteous;
-    src: url(../assets/fonts/Righteous/Righteous-Regular.ttf);
+header ul li .nav-link{
+    color: #FFFFFF;
 }
 
-.menu ul{
-    list-style: none;
+header ul li .nav-link:hover{
+    color: #40b3ff;
 }
 
-.menu li a{
-    color: white;
-    text-decoration: none;
+header ul li .active{
+    color: #40b3ff;
 }
 
-.menu li a:hover{
-    color: rgb(47, 110, 192);
-}
-
-/* Footer begin */
-
-footer{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 20%;
-    padding: 55px 0px 0px 0px;
+body{
     font-family: "Roboto-Light";
-    background-color: rgb(70, 65, 141);
-    color: seashell;
 }
 
-.container-footer{
-    display: grid;
-    grid-template-columns: auto auto;
+.container-title{
+    padding: 25px 25px;
+    background-color: #000000;
     text-align: center;
+    font-family: "Roboto-Light";
 }
+
+.container-title h2{
+    color: rgb(255, 255, 255);
+    padding-left: 25px;
+}
+
+.container-title h3{
+    color: rgb(255, 255, 255);
+    padding-left: 28px;
+}
+
+.container-skills{
+    padding: 25px 25px;
+    background-color: #000000;
+    text-align: center;
+    font-family: "Roboto-Light";
+}
+
+.container-skills h2{
+    color: rgb(255, 255, 255);
+    margin-bottom: 25px;
+}
+
+.container-skills h3{
+    color: rgb(255, 255, 255);
+    margin-bottom: 25px;
+}
+
+/* Body Icons */
+.fa-html5{
+    color: #ff5120;
+}
+
+.fa-css3-alt{
+    color: rgb(0, 162, 255);
+}
+
+.fa-js-square{
+    color: yellow;
+}
+
+.fa-angular{
+    color: rgb(255, 44, 44);
+}
+
+.fa-bootstrap{
+    color: rgb(153, 0, 255);
+}
+
+.fa-aws{
+    color: yellow;
+}
+
+.typescript-logo{
+    background: url("../assets/images/icons/typescript-logo.svg") no-repeat;
+    color: rgb(0, 162, 255);
+    width: 80px;
+    height: 80px;
+    margin-left: 45px;
+    border-radius: 10%;
+
+}
+
+/* Body Icons End*/
+
+
+/* Footer Begin */
 
 .social-icons i{
     padding: 15px 5px 0px 5px;
